--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --devtool eval --progress --colors --hot --open --content-base"
+    "dev": "webpack-dev-server --devtool eval --progress --colors --hot --open --content-base",
+    "deploy": "set NODE_ENV=production && webpack --progress --colors --config webpack.config.prod.js"
   },
   "repository": {
     "type": "git",
@@ -24,7 +25,8 @@
   "devDependencies": {
     "autoprefixer": "^6.7.5",
     "babel-core": "^6.23.1",
-    "babel-polyfill": "^6.23.0",
+    "babel-loader": "^6.3.2",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-stage-2": "^6.22.0",
     "css-loader": "^0.26.1",
